# quadifier

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  interface.c  interface.h  qtree.c  qtree.h  quadify.c  quadify.h
